--- a/TimeTracker.Client/wwwroot/index.html
+++ b/TimeTracker.Client/wwwroot/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="css/bootstrap-icons/bootstrap-icons.min.css" rel="stylesheet" />
     <link href="TimeTracker.Client.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
 
 </head>
 
@@ -23,6 +24,7 @@
         <div class="loading-progress-text"></div>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 
 </html>
